feat(auth): local username password authentication fixes
