# src/api/lib/swagger-express/controllers/localAuth.js
@@ -1,63 +1,42 @@
 // Auth controller that is used to handle
-// * /auth/token
-// * /auth/invalidate
+// * /auth/token - called during login flow
+// * /auth/invalidate - called during logout flow
 //
-'use strict';
 
-var httpStatus = require('http-status');
+import httpStatus from 'http-status';
+import auth from '../helpers/auth';
+import token from '../helpers/token';
 
 function makeError (code, message) {
-
-    var err = new Error(message || httpStatus[code]);
-    err.statusCode = code;
-    return err;
-
+  var err = new Error(message || httpStatus[code]);
+  err.statusCode = code;
+  return err;
 }
 
-module.exports = function (token, auth) {
+export function getToken (req, res, next) {
+  var user = req.swagger.params.user.value;
+  auth.authenticate(user.username, user.password, function (err, _user) {
+    if (err) {
+      return next(makeError(httpStatus.BAD_REQUEST, err.message));
+    }
+    token.generate(_user, function (err, token) {
+      if (err) {
+        return next(makeError(httpStatus.INTERNAL_SERVER_ERROR));
+      }
+      next(null, token);
+    });
+  });
+}
 
-    return {
-
-        getToken: function (user, done) {
-
-            auth.authenticate(user.username, user.password, function (err, _user) {
-
-                if (err) {
-                    return done(makeError(httpStatus.BAD_REQUEST, err.message));
-                }
-
-                token.generate(_user, function (err, token) {
-
-                    if (err) {
-                        return done(makeError(httpStatus.INTERNAL_SERVER_ERROR));
-                    }
-
-                    done(null, token);
-
-                });
-
-            });
-
-        },
-
-        invalidateToken: function (authToken, done) {
-
-            token.invalidate(authToken, function(err, isOk) {
-
-                if (err) {
-                    return done(makeError(httpStatus.INTERNAL_SERVER_ERROR));
-                }
-
-                if (!isOk) {
-                    return done(makeError(httpStatus.BAD_REQUEST, 'Invalid token'));
-                }
-
-                done();
-
-            });
-
-        }
-
-    };
-
-};
+export function invalidateToken (req, res, next) {
+  var authToken = req.swagger.params.token.value;
+  token.invalidate(authToken, function (err, isOk) {
+    if (err) {
+      return next(makeError(httpStatus.INTERNAL_SERVER_ERROR));
+    }
+    if (!isOk) {
+      return next(makeError(httpStatus.BAD_REQUEST, 'Invalid token'));
+    }
+    next();
+  });
+}
